Added a config to set the default locale